--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '1.8', '1.9', '1.10', '1.11' ]
+        java: [ '1.17' ]
     name: Java Version ${{ matrix.java }}
     steps:
       - uses: actions/checkout@master
