--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '1.17' ]
+        java: [ '17' ]
     name: Java Version ${{ matrix.java }}
     steps:
-      - uses: actions/checkout@master
-      - name: Setup java
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-          architecture: x64
-      - run: ./mvnw test
+      
+      - name: Install latest Maven
+        run: |
+          sudo apt update
+          sudo apt install -y maven
+          mvn -version  # check version
+      
+      - name: Run tests
+        run: ./mvnw test
