install Maven manually removed; added Java 21

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '17' ]
+        java: [ '17', '21' ]
     name: Java Version ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v4
@@ -21,15 +21,14 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ matrix.java }}
       
-      - name: Install latest Maven manually
+      - name: Install latest Maven
         run: |
-          MAVEN_VERSION=3.9.9
-          curl -fsSL https://downloads.apache.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz -o maven.tar.gz
-          tar -xvzf maven.tar.gz
-          sudo mv apache-maven-${MAVEN_VERSION} /opt/maven
-          echo "export PATH=/opt/maven/bin:$PATH" >> $GITHUB_ENV
+          sudo apt update
+          sudo apt install -y maven
+          echo "mvn -version"
           mvn -version
+          echo "./mvnw -version"
           ./mvnw -version
-      
+          
       - name: Run tests
         run: ./mvnw test
