Java 11 LTS, Java 17 LTS, Java 21 LTS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '17', '21', '11', '8' ]
+        java: [ '11', '17', '21' ]
     name: Java Version ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v4
