No Github actions for website T2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: Spark Framework CI
 
 on:
   push:
-	branches-ignore:
-		- 'website'
+	paths-ignore:
+      - 'docs/**'
   pull_request:
 
 jobs:
